Refer to correct section

--- a/CSApproachDetails.tex
+++ b/CSApproachDetails.tex
@@ -17,7 +17,7 @@
     CrashSimulator’s replay process.
 
 
-    \subsection{Anomaly Identification}
+    \subsection{Anomaly Identification} \label{subsec:anomalyidentification}
     
     Prior to beginning CrashSimulator's testing
     process, we identified a set of unusual conditions (which we refer to as anomalies)
