Fixes from Sam's feedback

--- a/CSIntro.tex
+++ b/CSIntro.tex
@@ -31,8 +31,7 @@ development costs.
 
 What is needed is a strategy for executing an application in such a way that
 it can experience the anomalies of a deployment
-environment without actually having to run in one.  This work
-introduces an approach to do just that.
+environment without actually having to run in one.
 
 %An application's environment is the collection of all resources
 %external to the application with which the application communicates.
@@ -73,7 +72,7 @@ introduces an approach to do just that.
 %
 
 In this paper, we introduce {\em CrashSimulator}, a testing approach that
-follows the method proposed above, and is based on the
+does this, and is based on the
 observation that: {\em Insight gleaned from a fault that is
   caused by unexpected interactions of {\em one application} with one
   of its deployment environments, can be leveraged to discover related
