--- a/CSIntro.tex
+++ b/CSIntro.tex
@@ -12,7 +12,7 @@ The conditions referred to here, which can include API behavior
 differences, variations in network performance, or peculiarities in
 filesystem state, all
 can easily go unnoticed
-during system testing because it is just not feasible to
+during system testing because it is not feasible to
 test programs 
 across every possible combination of hardware and software on which it
 is expected to run. Moreover, developers are often unaware
@@ -85,7 +85,7 @@ conditions (e.g.\ windy conditions, rain, etc) to
 test many other aircraft models in simulators against relevant
 aspects of the problematic environment.  In the case of CrashSimulator,
 we are concerned the implicit inputs, implementation details, and resource
-constraints and applications's environment supplies.  Rather than stormy
+constraints an applications's environment supplies.  Rather than stormy
 weather and foggy landings, applications experience conditions such as varying
 kernel versions with slightly different implementations details,
 unusual filesystem configurations, and unexpected network conditions that
