--- a/CSIntro.tex
+++ b/CSIntro.tex
@@ -84,8 +84,8 @@ of aircraft is prone to behave poorly under certain environmental
 conditions (e.g.\ windy conditions, rain, etc) to
 test many other aircraft models in simulators against relevant
 aspects of the problematic environment.  In the case of CrashSimulator,
-we are concerned the implicit inputs, implementation details, and resource
-constraints an applications's environment supplies.  Rather than stormy
+we are concerned with the implicit inputs, implementation details, and resource
+constraints an application's environment supplies.  Rather than stormy
 weather and foggy landings, applications experience conditions such as varying
 kernel versions with slightly different implementations details,
 unusual filesystem configurations, and unexpected network conditions that
