minor fixes to contrib

--- a/CSIntro.tex
+++ b/CSIntro.tex
@@ -272,9 +272,10 @@ This paper makes the following contributions:
 \item{It offers an approach for encoding an appropriate flow of
     interactions between an application and its environment as a model that
     can be later used to check for correct behavior.}
-\item{It presents the CrashSimulator tool that can implement the
-    discussed approach to successfully find bugs, both known and unknown,
-    in popular applications.}
+\item{It presents an implementation of CrashSimulator that can implement the
+    discussed approach to successfully find bugs, both known and unknown. 
+    Using this prototype on popular applications, such as {\tt wc}, {\tt ftp}, 
+    {\tt vim}, and {\tt nano}, we found 84 bugs.}
 \end{enumerate}
 
 In the remainder of this paper we
