--- a/CSIntro.tex
+++ b/CSIntro.tex
@@ -139,17 +139,19 @@ with a significant number of bugs that are only discovered after the fact
 %environment by creating a simulation of the environment using this
 %technique and executing the application within it.
 
-Here is how CrashSimulator works.  A developer will run a
-test in the application's usual testing environment, recording a
-trace of its system calls. After checking some aspects of the trace for
-relevance to the particular test, she will construct a mutator to perturb
-the trace so that it appears
-as if it were running in the simulated anomalous environment, and then
-attempt to replay the modified trace, i.e. allow the application to
+Here is how CrashSimulator works. Suppose an application $A'$ has failed due to
+a newly discovered environmental anomaly.  A developer using CrashSimulator can
+then test whether other applications $A_1'$, $A_2'$,... suffer from the same
+problem.  The first step is to run these other applications in their development
+environment in order to gather traces.  Next, she writes a simple script to
+evaluate whether traces are relevant to this anomaly and to mutate traces to
+give the appearance that they were generated in the anomalous environment.
+Finally, she
+attempts to replay the modified trace, i.e. allow the application to
 run under the control of CrashSimulator, substituting the system call
 return values (and side-effects) that would occur in the anomalous
 environment. In parallel with the replay, a checker will run under the
-control of CrashSimulator that decides whether the resulting behavior
+control of CrashSimulator that decides whether the application's behavior
 is indicative of a fault.
 
 %Given that we have a simulation of a given environment, the next step is to make decisions about whether an application
