--- a/CrashSimulator.tex
+++ b/CrashSimulator.tex
@@ -363,7 +363,7 @@
 % paper title
 % can use linebreaks \\ within to get better formatting as desired
 %\title{CrashSimulator: Identifying Environment Induced Faults Through System Call Trace Analysis, Mutation, and Replay}
-\title{Know Before You Go: CrashSimulator Finds Real-World Faults Before Deployment}
+\title{CrashSimulator: Finding Deployment Bugs Before Deployment}
 
 
 % author names and affiliations
