--- a/CSEvaluation.tex
+++ b/CSEvaluation.tex
@@ -599,18 +599,13 @@ system to become unresponsive.
     \toprule{}
         Application     & Source Replaced & Preserve Xattrs & Preserve Timestamps & Copying Devices\\
 \hline
-        mv              & Correct             & Correct         & Correct             & Correct\\
-        mmv             & Correct             & {\bf Sec. Flaw} & {\bf Time
-Loss} & Correct\\
-        install         & Correct             & {\bf Sec. Flaw} & {\bf Time
-Loss} & {\bf Fill Disk} \\
-        perl File::Copy & Correct             & {\bf Sec. Flaw} & {\bf Time
-Loss} & {\bf Fill Disk} \\
-        shutils         & {\bf Corrupt}	& {\bf Sec. Flaw} 	& Correct             & Correct\\
-        rust            & Correct             & {\bf Sec. Flaw} & {\bf Time
-Loss} & {\bf Fill Disk} \\
-        boost::copyfile & {\bf Corrupt}	      & {\bf Sec. Flaw} & {\bf Time
-Loss} & {\bf Fill Disk} \\
+        {\tt mv}              & Correct             & Correct         & Correct             & Correct\\
+        {\tt mmv}             & Correct             & {\bf Sec. Flaw} & {\bf Time Loss} & Correct\\
+        {\tt install}         & Correct             & {\bf Sec. Flaw} & {\bf Time Loss} & {\bf Fill Disk} \\
+        {\tt perl File::Copy} & Correct             & {\bf Sec. Flaw} & {\bf Time Loss} & {\bf Fill Disk} \\
+        {\tt shutils}         & {\bf Corrupt}	& {\bf Sec. Flaw} 	& Correct             & Correct\\
+        {\tt rust}             & Correct             & {\bf Sec. Flaw} & {\bf Time Loss} & {\bf Fill Disk} \\
+        {\tt boost::copyfile} & {\bf Corrupt}	      & {\bf Sec. Flaw} & {\bf Time Loss} & {\bf Fill Disk} \\
     \bottomrule{}
     \end{tabular}
     \caption{Applications and libraries analyzed to determine whether or not
